--- a/public/index.html
+++ b/public/index.html
@@ -18,4 +18,9 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+<style>
+    body {
+        background-color:#ebfff0;
+    }
+</style>
 </html>
